fixed older notebooks, will work with current momsdata. added new demo for interp and vectors

--- a/Demos/Mollweide_projection.ipynb
+++ b/Demos/Mollweide_projection.ipynb
@@ -16,21 +16,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "249 .aaa files found in '/data/ASDR/H-core-M25/M35-1536/myavsbq/.\n",
-      "Dump numbers range from 3 to 437.\n",
-      "Warning: Some dumps are missing!\n",
-      "The PPMstar grid is being constructed, this can take a moment\n"
+      "438 .aaa files found in '/data/ASDR/H-core-M25/M35-1536/myavsbq/.\n",
+      "Dump numbers range from 0 to 437.\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "yt : [INFO     ] 2018-12-01 20:12:35,818 Parameters: current_time              = 0.0\n",
-      "yt : [INFO     ] 2018-12-01 20:12:35,819 Parameters: domain_dimensions         = [384 384 384]\n",
-      "yt : [INFO     ] 2018-12-01 20:12:35,821 Parameters: domain_left_edge          = [-2493.48950195 -2493.48950195 -2493.48950195]\n",
-      "yt : [INFO     ] 2018-12-01 20:12:35,823 Parameters: domain_right_edge         = [2493.48950195 2493.48950195 2493.48950195]\n",
-      "yt : [INFO     ] 2018-12-01 20:12:35,824 Parameters: cosmological_simulation   = 0.0\n"
+      "yt : [INFO     ] 2018-12-20 16:59:53,191 Parameters: current_time              = 0.0\n",
+      "yt : [INFO     ] 2018-12-20 16:59:53,193 Parameters: domain_dimensions         = [384 384 384]\n",
+      "yt : [INFO     ] 2018-12-20 16:59:53,193 Parameters: domain_left_edge          = [-2493.48950195 -2493.48950195 -2493.48950195]\n",
+      "yt : [INFO     ] 2018-12-20 16:59:53,194 Parameters: domain_right_edge         = [2493.48950195 2493.48950195 2493.48950195]\n",
+      "yt : [INFO     ] 2018-12-20 16:59:53,195 Parameters: cosmological_simulation   = 0.0\n"
      ]
     }
    ],
@@ -39,6 +37,8 @@
     "import healpy as hp\n",
     "import matplotlib.pyplot as plt\n",
     "import nugridpy.utils as utils\n",
+    "import sys\n",
+    "sys.path.insert(0,'/home/user/home/PyPPM/')\n",
     "from ppmpy import ppm\n",
     "import os\n",
     "import yt\n",
@@ -51,13 +51,13 @@
     "path = os.path.join(dir_repo,dir_project,run)\n",
     "moms = ppm.MomsDataSet(os.path.join(path,'myavsbq'),dump)\n",
     "\n",
-    "x,y,z,r = moms.get_grid()\n",
+    "x,y,z = moms.get_cgrid()\n",
     "\n",
-    "res = moms.momsdata.resolution    # should be 192\n",
-    "vor_matrix = np.reshape(moms.get(6,dump),(res,res,res))\n",
+    "res = moms.moms_resolution    # should be 192\n",
+    "vor_matrix = moms.get(6,dump)\n",
     "\n",
     "data = dict(vorticity=vor_matrix)\n",
-    "bbox = np.array([[min(x),max(x)], [min(y),max(y)], [min(z),max(z)]])\n",
+    "bbox = np.array([[np.min(x),np.max(x)], [np.min(y),np.max(y)], [np.min(z),np.max(z)]])\n",
     "ds = yt.load_uniform_grid(data=data, domain_dimensions=[res,res,res], length_unit='Mm', bbox=bbox)"
    ]
   },
@@ -107,7 +107,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3028f22754ef461db8ba9ddf16b8bc76",
+       "model_id": "d7f6e8ab6f35468480fee44972fe7306",
        "version_major": 2,
        "version_minor": 0
       },
@@ -122,10 +122,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "yt : [INFO     ] 2018-12-01 20:19:48,185 Extracting (sampling: ('stream', 'vorticity'))\n",
-      "DEBUG:matplotlib.colorbar:locator: <matplotlib.colorbar._ColorbarAutoLocator object at 0x7fe5d7281940>\n",
+      "yt : [INFO     ] 2018-12-20 17:01:29,493 Extracting (sampling: ('stream', 'vorticity'))\n",
+      "DEBUG:matplotlib.colorbar:locator: <matplotlib.colorbar._ColorbarAutoLocator object at 0x7f8b68c547b8>\n",
       "DEBUG:matplotlib.colorbar:Using auto colorbar locator on colorbar\n",
-      "DEBUG:matplotlib.colorbar:locator: <matplotlib.colorbar._ColorbarAutoLocator object at 0x7fe5d7281940>\n",
+      "DEBUG:matplotlib.colorbar:locator: <matplotlib.colorbar._ColorbarAutoLocator object at 0x7f8b68c547b8>\n",
       "DEBUG:matplotlib.colorbar:Setting pcolormesh\n"
      ]
     }
@@ -144,18 +144,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "DEBUG:matplotlib.axes._base:update_title_pos\n",
-      "DEBUG:matplotlib.axes._base:update_title_pos\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "plt.savefig('vorticity-mollweide.png')"
    ]
