--- a/Demos/MomsData_Demo.ipynb
+++ b/Demos/MomsData_Demo.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Data analysis demo for H-core-M25 stellar hydro project\n",
-    "Last update: Nov 16, 2018.\n",
+    "Last update: Dec 20, 2018.\n",
     "\n",
     "This notebook contains a demonstration how to analyse the 3D filtered _moms_ data and the 1D radial profile _rprof_ data from _PPMstar_ 3D hydrodynamic simulations. \n",
     "\n",
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,6 +60,7 @@
     "# updated version\n",
     "#sys.path.insert(0,'/user/david/PyPPM/')\n",
     "#sys.path.insert(0,'/user/PyPPM/')\n",
+    "# sys.path.insert(0,'/home/user/home/PyPPM/')\n",
     "from ppmpy import ppm\n",
     "\n",
     "cb = utils.linestylecb # colours"
@@ -67,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -76,6 +77,13 @@
      "text": [
       "M29-768\n",
       "M35-1536\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "shell-init: error retrieving current directory: getcwd: cannot access parent directories: No such file or directory\n"
      ]
     }
    ],
@@ -86,19 +94,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "748 rprof files found in '/data/ASDR/H-core-M25/M29-768/rprofs/.\n",
-      "Dump numbers range from 0 to 747.\n",
+      "2413 rprof files found in '/data/ASDR/H-core-M25/M29-768/rprofs/.\n",
+      "Dump numbers range from 0 to 2412.\n",
       "Reading history file '/data/ASDR/H-core-M25/M29-768/rprofs/HcoreE00768-0000.hstry'.\n",
-      "748 .aaa files found in '/data/ASDR/H-core-M25/M29-768/myavsbq/.\n",
-      "Dump numbers range from 0 to 747.\n",
-      "The PPMstar grid is being constructed, this can take a moment\n",
+      "2661 .aaa files found in '/data/ASDR/H-core-M25/M29-768/myavsbq/.\n",
+      "Dump numbers range from 0 to 2412.\n",
+      "Warning: Some dumps are missing!\n",
       "moms and rprof dictionary created\n"
      ]
     }
@@ -130,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,16 +165,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x,y,z,r=moms[runid].get_grid()"
+    "x,y,z=moms[runid].get_cgrid()\n",
+    "r,theta,phi=moms[runid].get_sgrid()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -178,12 +187,12 @@
     }
    ],
    "source": [
-    "print(192**3,len(r))"
+    "print(192**3,len(r.flatten()))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +204,7 @@
     }
    ],
    "source": [
-    "print(\"Distance center of grid to max x value of domain: %6.4f Mm\" % moms[runid].get_grid()[0][-1])"
+    "print(\"Distance center of grid to max x value of domain: %6.4f Mm\" % np.max(x))"
    ]
   },
   {
@@ -214,7 +223,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "749b7cd0899c44398f81afa68a8527cd",
+       "model_id": "8098106fe03e48efbb9d054dfd274845",
        "version_major": 2,
        "version_minor": 0
       },
@@ -239,8 +248,8 @@
    "source": [
     "ifig=0\n",
     "ifig += 1; plt.close(ifig);  plt.figure(ifig)\n",
-    "hist(r,86)\n",
-    "xmax = moms[runid].get_grid()[0][-1]\n",
+    "plt.hist(r.flatten(),86)\n",
+    "xmax = np.max(x)\n",
     "vlines(xmax,0,2.3e5,linestyles='--',lw=0.5)\n",
     "xlabel('radius / Mm')\n",
     "ylabel('')"
@@ -255,22 +264,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "xx=reshape(x,[192,192,192])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7c92e3cb18ad4591b2c922b19c54d865",
+       "model_id": "9fe55b8437ba47c88d838080ab9bd3d6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -284,10 +284,10 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fce8093dcc0>]"
+       "[<matplotlib.lines.Line2D at 0x7fd49400b668>]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +295,7 @@
    "source": [
     "ifig += 1; plt.close(ifig);  plt.figure(ifig)\n",
     "#plot(xx[0][0])\n",
-    "plot(x[0:1000])"
+    "plt.plot(x.flatten()[0:1000])"
    ]
   },
   {
@@ -307,19 +307,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# grab the grid\n",
-    "x,y,z,r = moms[runid].get_grid()\n",
-    "\n",
-    "# they are flattened arrays, rearrange\n",
-    "resolution = moms[runid].momsdata.resolution\n",
-    "r_matrix = np.reshape(r,(resolution,resolution,resolution))\n",
+    "# they are not flattened arrays anymore, grab resolution\n",
+    "resolution = moms[runid].moms_resolution\n",
     "\n",
     "# extent x,y\n",
-    "extent=[min(x),max(x),min(y),max(y)]\n",
+    "extent=[np.min(x),np.max(x),np.min(y),np.max(y)]\n",
     "\n",
     "# slice number\n",
     "slice_num = int(resolution/2) # central slice"
@@ -334,13 +330,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e4373669b4524d43b48f5c950f00a564",
+       "model_id": "4a1897c562434ca997bc769f39035027",
        "version_major": 2,
        "version_minor": 0
       },
@@ -355,9 +351,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "DEBUG:matplotlib.colorbar:locator: <matplotlib.colorbar._ColorbarAutoLocator object at 0x7fce808dec18>\n",
+      "DEBUG:matplotlib.colorbar:locator: <matplotlib.colorbar._ColorbarAutoLocator object at 0x7fd493f93240>\n",
       "DEBUG:matplotlib.colorbar:Using auto colorbar locator on colorbar\n",
-      "DEBUG:matplotlib.colorbar:locator: <matplotlib.colorbar._ColorbarAutoLocator object at 0x7fce808dec18>\n",
+      "DEBUG:matplotlib.colorbar:locator: <matplotlib.colorbar._ColorbarAutoLocator object at 0x7fd493f93240>\n",
       "DEBUG:matplotlib.colorbar:Setting pcolormesh\n"
      ]
     },
@@ -367,14 +363,14 @@
        "Text(0, 0.5, 'radius')"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "ifig += 1; plt.close(ifig); plt.figure(ifig)\n",
-    "plt.imshow(r_matrix[:][:][slice_num],extent=extent)\n",
+    "plt.imshow(r[:][:][slice_num],extent=extent)\n",
     "plt.ylabel('y')\n",
     "plt.xlabel('x')\n",
     "cbar = plt.colorbar()\n",
@@ -412,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -428,18 +424,18 @@
    ],
    "source": [
     "# spatial resolution for momsdata\n",
-    "print('The spatial resolution of 768 momsdata is {:0.3f}'.format(np.diff(moms[runid].get_grid()[0])[0]),'Mm')\n",
-    "print('While PPMStar 768 has a spatial resolution of {:0.3f}'.format(np.diff(moms[runid].get_grid()[0])[0]/4.),'Mm')\n",
+    "print('The spatial resolution of 768 momsdata is {:0.3f}'.format(np.diff(moms[runid].get_cgrid()[0][0])[0][0]),'Mm')\n",
+    "print('While PPMStar 768 has a spatial resolution of {:0.3f}'.format(np.diff(moms[runid].get_cgrid()[0][0])[0][0]/4.),'Mm')\n",
     "\n",
     "print('')\n",
     "\n",
     "# what is the extent of the simulation?\n",
-    "print('The extent of the simulation is then {:0.0f}'.format(np.diff(moms[runid].get_grid()[0])[0] * resolution/2.),'Mm')"
+    "print('The extent of the simulation is then {:0.0f}'.format(np.diff(moms[runid].get_cgrid()[0][0])[0][0] * resolution/2.),'Mm')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -584,22 +580,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.6/dist-packages/scipy/stats/_binned_statistic.py:607: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n",
-      "  result = result[core]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n",
     "# make an rprof of temperature and ut\n",
     "ut_avg, radial_axis = thismoms.get_rprof(4,thisdump)\n",
+    "ut = thismoms.get(4,thisdump)\n",
     "\n",
     "# first we need to construct T from quantities\n",
     "mu = 0.617 * thismoms.get(9,fname=thisdump) + (1 - thismoms.get(9,fname=thisdump))*0.669\n",
@@ -616,13 +603,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "693a081359774cab86087ad3a1e9d117",
+       "model_id": "9930eac0136049dd83fe32edbd9fecad",
        "version_major": 2,
        "version_minor": 0
       },
@@ -636,10 +623,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fce80785278>"
+       "<matplotlib.legend.Legend at 0x7fd493e992b0>"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -658,13 +645,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fb28fde692a34f45915c36f4ced5778b",
+       "model_id": "eba86f671af8403ba5907962e7d9ac07",
        "version_major": 2,
        "version_minor": 0
       },
@@ -678,10 +665,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fce807aa240>"
+       "<matplotlib.legend.Legend at 0x7fd493ec8630>"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -703,53 +690,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Planar Slice Image"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x,y,z,r = moms[runid].get_grid()\n",
-    "\n",
-    "# they are flattened arrays, rearrange\n",
-    "resolution = moms[runid].momsdata.resolution\n",
-    "r_matrix = np.reshape(r,(resolution,resolution,resolution))\n",
-    "\n",
-    "# extent x,y\n",
-    "extent=[min(x),max(x),min(y),max(y)]\n",
-    "\n",
-    "# slice number\n",
-    "slice_num = int(resolution/2)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### T9"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "T_matrix = np.reshape(T,(resolution,resolution,resolution))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cd77c859b2df4f988ece11be5608568f",
+       "model_id": "9c0ae9ec098d4a70b40696096f9e5aa6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -764,9 +716,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "DEBUG:matplotlib.colorbar:locator: <matplotlib.colorbar._ColorbarAutoLocator object at 0x7fce80705080>\n",
+      "DEBUG:matplotlib.colorbar:locator: <matplotlib.colorbar._ColorbarAutoLocator object at 0x7fd495562400>\n",
       "DEBUG:matplotlib.colorbar:Using auto colorbar locator on colorbar\n",
-      "DEBUG:matplotlib.colorbar:locator: <matplotlib.colorbar._ColorbarAutoLocator object at 0x7fce80705080>\n",
+      "DEBUG:matplotlib.colorbar:locator: <matplotlib.colorbar._ColorbarAutoLocator object at 0x7fd495562400>\n",
       "DEBUG:matplotlib.colorbar:Setting pcolormesh\n"
      ]
     },
@@ -776,7 +728,7 @@
        "Text(0, 0.5, 'T9')"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -784,7 +736,7 @@
    "source": [
     "ifig += 1; plt.close(ifig);  plt.figure(ifig)\n",
     "\n",
-    "plt.imshow(T_matrix[:][:][slice_num],extent=extent)\n",
+    "plt.imshow(T[:][:][slice_num],extent=extent)\n",
     "plt.ylabel('y')\n",
     "plt.xlabel('x')\n",
     "cbar = plt.colorbar()\n",
@@ -804,20 +756,11 @@
    "cell_type": "code",
    "execution_count": 41,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "ut_matrix = np.reshape(thismoms.get(4,thisdump),(resolution,resolution,resolution))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8359b51ece264ed4a6cde3a2a80ed73f",
+       "model_id": "2729496d8aca449fb4c8618ed3220af3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -832,9 +775,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "DEBUG:matplotlib.colorbar:locator: <matplotlib.colorbar._ColorbarAutoLocator object at 0x7fce8069b438>\n",
+      "DEBUG:matplotlib.colorbar:locator: <matplotlib.colorbar._ColorbarAutoLocator object at 0x7fd494328748>\n",
       "DEBUG:matplotlib.colorbar:Using auto colorbar locator on colorbar\n",
-      "DEBUG:matplotlib.colorbar:locator: <matplotlib.colorbar._ColorbarAutoLocator object at 0x7fce8069b438>\n",
+      "DEBUG:matplotlib.colorbar:locator: <matplotlib.colorbar._ColorbarAutoLocator object at 0x7fd494328748>\n",
       "DEBUG:matplotlib.colorbar:Setting pcolormesh\n"
      ]
     },
@@ -844,14 +787,14 @@
        "Text(0, 0.5, '|Ut|')"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "ifig += 1; plt.close(ifig); plt.figure(ifig)\n",
-    "plt.imshow(ut_matrix[:][:][slice_num],extent=extent)\n",
+    "plt.imshow(ut[:][:][slice_num],extent=extent)\n",
     "plt.ylabel('y')\n",
     "plt.xlabel('x')\n",
     "cbar = plt.colorbar()\n",
@@ -869,18 +812,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "# x=y=0, a particular z slice. convert to an 8-bit number\n",
-    "fv = np.reshape(thismoms.get(9,thisdump),(resolution,resolution,resolution))\n",
+    "fv = thismoms.get(9,thisdump)\n",
     "fv_bit = 251 + 13.35455532 * np.log(fv[:][:][96])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -919,13 +862,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6d33ff162bfd4c41b9a66bd7ecc1ac7a",
+       "model_id": "f0a1f45253f84896abae64b8255116b8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -942,7 +885,7 @@
        "(-2486.97900390625, 2486.979248046875, -2486.97900390625, 2486.979248046875)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -950,11 +893,17 @@
    "source": [
     "my_dpi = 300\n",
     "ifig+=1; plt.close(ifig); plt.figure(ifig,figsize=(536/my_dpi, 536/my_dpi), dpi=my_dpi)\n",
-    "x,y,z,r = thismoms.get_grid()\n",
     "plt.pcolor(np.unique(x),np.unique(y),fv_bit,cmap=cmap,norm=norm)\n",
     "\n",
     "plt.axis('off')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
