--- a/Demos/Slices_and_volume_rendering.ipynb
+++ b/Demos/Slices_and_volume_rendering.ipynb
@@ -46,10 +46,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x,y,z,r = moms.get_grid()\n",
+    "x,y,z = moms.get_cgrid()\n",
     "\n",
-    "res = moms.momsdata.resolution    # should be 384\n",
-    "vor_matrix = np.reshape(moms.get(6,dump),(res,res,res))"
+    "res = moms.moms_resolution    # should be 384\n",
+    "vor_matrix = moms.get(6,dump)"
    ]
   },
   {
@@ -130,10 +130,10 @@
    ],
    "source": [
     "data = dict(vorticity=vor_matrix)\n",
-    "bbox = np.array([[min(x),max(x)], [min(y),max(y)], [min(z),max(z)]])\n",
+    "bbox = np.array([[np.min(x),np.max(x)], [np.min(y),np.max(y)], [np.min(z),np.max(z)]])\n",
     "ds = yt.load_uniform_grid(data=data, domain_dimensions=[res,res,res], length_unit='Mm', bbox=bbox)\n",
     "\n",
-    "slc = yt.SlicePlot(ds, normal='z', fields='vorticity', center='c', width=(np.diff(x)[0]*res, 'Mm'))\n",
+    "slc = yt.SlicePlot(ds, normal='z', fields='vorticity', center='c', width=(np.diff(x)[0][0][0]*res, 'Mm'))\n",
     "slc.set_log('vorticity', False)"
    ]
   },
