minor modifications to notebook

--- a/Demos/MomsData_Interpolation_and_Vectors.ipynb
+++ b/Demos/MomsData_Interpolation_and_Vectors.ipynb
@@ -166,12 +166,55 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We can now make plots of perturbations of say pressure, $(P - <P>) / <P>$, at a particular radius as well as plotting radial velocities at a surface. This is possible with a trillinear interpolation of a quantity on the grid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The percent difference between the mean of these norms is 8.52e-09\n"
+     ]
+    }
+   ],
+   "source": [
+    "# let's take a look at the radial velocities at the convective boundary\n",
+    "# we will say that the convective boundary is when the gradient of FV is largest\n",
+    "conv_radius = thisrprof.boundary_radius([thismoms.what_dump_am_i],500.,1800.,'FV','max_grad')\n",
+    "\n",
+    "# problem is in the data we have |ur|, what about direction?\n",
+    "# we can use ux, uy and uz to construct ur, utheta and uphi!\n",
+    "# looking at the docs, this function gives me a list which contains ur, utheta and uphi\n",
+    "u = thismoms.get_spherical_components('ux','uy','uz')\n",
+    "ur = u[0]\n",
+    "utheta = u[1]\n",
+    "uphi = u[2]\n",
+    "\n",
+    "# the norm of |u| should be the same whether it is in cartesian or spherical, check\n",
+    "# we can get a norm with variables within data by calling their strings we assigned them earlier\n",
+    "# as well as supplying our own arrays to the method for derived quantities\n",
+    "u_normc = thismoms.norm('ux','uy','uz')\n",
+    "u_norms = thismoms.norm(ur,utheta,uphi)\n",
+    "\n",
+    "print('The percent difference between the mean of these norms is {:0.2e}'.\n",
+    "      format(np.mean((u_normc - u_norms)/u_normc)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "With all rprof and momsdata methods there are docstrings to help the user. They should be detailed enough for you to understand what is going on like below:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -240,44 +283,52 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We can now make plots of perturbations, $(P - <P>) / <P>$, of a quantity at a particular radius. We can also take a look at radial velocities at a surface"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The percent difference between the mean of these norms is 8.52e-09\n"
-     ]
+     "data": {
+      "text/plain": [
+       "\u001b[0;31mSignature:\u001b[0m \u001b[0mthismoms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_interpolation\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvarloc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mradius\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfname\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mplot_mollweide\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnpoints\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m5000\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mperturbation\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+       "\u001b[0;31mDocstring:\u001b[0m\n",
+       "Returns the trillinear interpolated array of values of 'varloc' at a radius of\n",
+       "'radius' as well as the 'theta,phi' (mollweide) coordinates of the 'varloc' values\n",
+       "\n",
+       "Parameters\n",
+       "----------\n",
+       "varloc: str, int, np.ndarray\n",
+       "    String: for the variable you want if defined on instantiation\n",
+       "    Int: index location of the variable you want\n",
+       "    np.ndarray: quantity you want to have interpolated on the grid\n",
+       "radius: float or np.ndarray\n",
+       "    The radius of the sphere you want 'varloc' to be interpolated to\n",
+       "fname: None,int\n",
+       "    None: default option, will grab current dump\n",
+       "    int: Dump number\n",
+       "npoints: int\n",
+       "    The number of 'theta and phi' points you want for a projection plot\n",
+       "perturbation: bool\n",
+       "    Do we subtract off the average (on a sphere) from 'varloc' being interpolated and\n",
+       "    then scale it by that average (on a sphere)? i.e varloc_interpolated = (varloc - <varloc>)/<varloc>\n",
+       "\n",
+       "Returns\n",
+       "-------\n",
+       "plot_mollweide: True\n",
+       "    varloc_interpolated,theta,phi: np.ndarray or list\n",
+       "\n",
+       "plot_mollweide: False\n",
+       "    varloc_interpolated: np.ndarray or list\n",
+       "\u001b[0;31mFile:\u001b[0m      ~/home/PyPPM/ppmpy/ppm.py\n",
+       "\u001b[0;31mType:\u001b[0m      method\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "# let's take a look at the radial velocities at the convective boundary\n",
-    "# we will say that the convective boundary is when the gradient of FV is largest\n",
-    "conv_radius = thisrprof.boundary_radius([thismoms.what_dump_am_i],500.,1800.,'FV','max_grad')\n",
-    "\n",
-    "# problem is in the data we have |ur|, what about direction?\n",
-    "# we can use ux, uy and uz to construct ur, utheta and uphi!\n",
-    "# looking at the docs, this function gives me a list which contains ur, utheta and uphi\n",
-    "u = thismoms.get_spherical_components('ux','uy','uz')\n",
-    "ur = u[0]\n",
-    "utheta = u[1]\n",
-    "uphi = u[2]\n",
-    "\n",
-    "# the norm of |u| should be the same whether it is in cartesian or spherical, check\n",
-    "u_normc = thismoms.norm('ux','uy','uz')\n",
-    "u_norms = thismoms.norm(ur,utheta,uphi)\n",
-    "\n",
-    "print('The percent difference between the mean of these norms is {:0.2e}'.\n",
-    "      format(np.mean((u_normc - u_norms)/u_normc)))"
+    "thismoms.get_interpolation?"
    ]
   },
   {
