--- a/C-ingestion/Mar_Mat_rho_fluct.ipynb
+++ b/C-ingestion/Mar_Mat_rho_fluct.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Mach number and density fluctuations in run I11"
+    "# Mach number and density fluctuations in runs I11 and I5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -18,8 +18,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Reading attributes from file  YProfile-01-0266.bobaaa\n",
+      "There are 267 YProfile files in the /data/ASDR/PPMstar/C-ingestion/I5/YProfile/ directory.\n",
+      "Ndump values range from 1 to 267\n",
+      "Time values range from 8.87622 to 2369.95\n",
       "Reading attributes from file  YProfile-01-0090.bobaaa\n",
-      "There are 91 YProfile files in the /data/ppm_rpod2/YProfiles/C-ingestion/I11 directory.\n",
+      "There are 91 YProfile files in the /data/ASDR/PPMstar/C-ingestion/I11/YProfile/ directory.\n",
       "Ndump values range from 1 to 91\n",
       "Time values range from 8.87622 to 807.736\n"
      ]
@@ -32,15 +36,22 @@
     "import numpy as np\n",
     "import moments\n",
     "from ppmpy import ppm\n",
+    "import logging\n",
+    "mpl_logger = logging.getLogger('matplotlib')\n",
+    "mpl_logger.setLevel(logging.WARNING) \n",
     "\n",
-    "run_id = 'I11'\n",
-    "moms = moments.Moments('/data/ASDR/C-ingestion/{:s}/FVandMoms48/'.format(run_id), use_e3d=False)\n",
-    "yp = ppm.yprofile('/data/ppm_rpod2/YProfiles/C-ingestion/{:s}'.format(run_id), filename_offset=-1)"
+    "moms = {}\n",
+    "yp = {}\n",
+    "for rid in ['I5', 'I11']:\n",
+    "    moms[rid] = moments.Moments('/data/ASDR/PPMstar/C-ingestion/{:s}/FVandMoms48/'.\\\n",
+    "                           format(rid), use_e3d=False)\n",
+    "    yp[rid] = ppm.yprofile('/data/ASDR/PPMstar/C-ingestion/{:s}/YProfile/'.\\\n",
+    "                      format(rid), filename_offset=-1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -120,7 +131,7 @@
     "    return np.array(rho_fluct)\n",
     "\n",
     "def plot_panels(moms, dump, slice_width, vars, vlims, cmaps, axis=0, interpolation='spline16', \\\n",
-    "                ifig=1, dpi=120, cbars=True, cbar_labels=None, labels=None, label_coords=None, \\\n",
+    "                ifig=1, dpi=100, cbars=True, cbar_labels=None, labels=None, label_coords=None, \\\n",
     "                label_colors=None):\n",
     "    data = {}\n",
     "    data['Mar'], data['Mat'] = get_Mach(moms, dump)\n",
@@ -182,7 +193,7 @@
     "                                 0.9*panel_width/figure_width, \\\n",
     "                                 0.5*(panel_height - panel_width)/panel_height])\n",
     "            fig.add_axes(cax)\n",
-    "            plt.axes(cax)\n",
+    "            plt.sca(cax)\n",
     "            \n",
     "            cbar = np.transpose(np.repeat(np.linspace(vlims[v][0], vlims[v][1], 256), 16).\\\n",
     "                   reshape((256, 16)))\n",
@@ -201,7 +212,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "slice_width = 5\n",
+    "vars = ('Mar', 'Mat', 'rho_fluct')\n",
+    "cmaps = {'Mar':stretch_colormap(cm.viridis, gamma=0.75), \\\n",
+    "         'Mat':stretch_colormap(cm.viridis, gamma=0.75), \\\n",
+    "         'rho_fluct':stretch_colormap(cm.BrBG, gamma=0.75, midpoint=0.5)}\n",
+    "cbar_labels = {'Mar':r'Ma$_\\mathrm{r}$', \\\n",
+    "               'Mat':r'Ma$_\\perp$', \\\n",
+    "               'rho_fluct':r'($\\rho$ - $\\langle\\rho\\rangle$) / $\\langle\\rho\\rangle$'}\n",
+    "label_coords = {'Mar':((0.025, 0.95), (0.8, 0.95)), \\\n",
+    "                'Mat':((0.025, 0.95), (0.8, 0.95)), \\\n",
+    "                'rho_fluct':((0.025, 0.95), (0.8, 0.95))}\n",
+    "label_colors = {'Mar':('w', 'w'), \\\n",
+    "                'Mat':('w', 'w'), \\\n",
+    "                'rho_fluct':('k', 'k')}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -209,7 +242,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9e825a87142a4708b83f7faeab8db35b",
+       "model_id": "b96d38c9e07f4d72911fcf4a25c7600b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -221,13 +254,6 @@
      "output_type": "display_data"
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "DEBUG:matplotlib.axes._base:update_title_pos\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -235,52 +261,78 @@
       "max(abs(Mat)): 2.87e-01\n",
       "max(abs(rho_fluct)): 1.48e-01\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "DEBUG:matplotlib.font_manager:findfont: Matching :family=sans-serif:style=normal:variant=normal:weight=normal:stretch=normal:size=10.0 to DejaVu Sans ('/usr/local/lib/python3.6/dist-packages/matplotlib/mpl-data/fonts/ttf/DejaVuSans.ttf') with score of 0.050000.\n",
-      "DEBUG:matplotlib.backends.backend_pdf:Assigning font /b'F1' = '/usr/local/lib/python3.6/dist-packages/matplotlib/mpl-data/fonts/ttf/DejaVuSans.ttf'\n",
-      "DEBUG:matplotlib.axes._base:update_title_pos\n",
-      "DEBUG:matplotlib.axes._base:update_title_pos\n",
-      "DEBUG:matplotlib.backends.backend_pdf:Embedding font /usr/local/lib/python3.6/dist-packages/matplotlib/mpl-data/fonts/ttf/DejaVuSans.ttf.\n",
-      "DEBUG:matplotlib.backends.backend_pdf:Writing TrueType font.\n"
-     ]
     }
    ],
    "source": [
-    "slice_width = 5\n",
-    "vars = ('Mar', 'Mat', 'rho_fluct')\n",
+    "rid = 'I11'\n",
     "vlims = {'Mar':(0., 0.2), \\\n",
     "         'Mat':(0., 0.2), \\\n",
     "         'rho_fluct':(-0.1, 0.1)}\n",
-    "cmaps = {'Mar':stretch_colormap(cm.viridis, gamma=0.75), \\\n",
-    "         'Mat':stretch_colormap(cm.viridis, gamma=0.75), \\\n",
-    "         'rho_fluct':stretch_colormap(cm.BrBG, gamma=0.75, midpoint=0.5)}\n",
-    "cbar_labels = {'Mar':r'Ma$_\\mathrm{r}$', \\\n",
-    "               'Mat':r'Ma$_\\perp$', \\\n",
-    "               'rho_fluct':r'($\\rho$ - $\\langle\\rho\\rangle$) / $\\langle\\rho\\rangle$'}\n",
     "axis = 0\n",
     "\n",
     "ifig = 1\n",
     "#for dump in (68, 74, 81, 88):\n",
     "for dump in (81, ):\n",
-    "    t = yp.get('t', fname=dump)[-1]\n",
-    "    labels = {'Mar':(run_id, '{:.1f} min'.format(t/60.)), \\\n",
-    "              'Mat':(run_id, '{:.1f} min'.format(t/60.)), \\\n",
-    "              'rho_fluct':(run_id, '{:.1f} min'.format(t/60.))}\n",
-    "    label_coords = {'Mar':((0.025, 0.95), (0.8, 0.95)), \\\n",
-    "                    'Mat':((0.025, 0.95), (0.8, 0.95)), \\\n",
-    "                    'rho_fluct':((0.025, 0.95), (0.8, 0.95))}\n",
-    "    label_colors = {'Mar':('w', 'w'), \\\n",
-    "                    'Mat':('w', 'w'), \\\n",
-    "                    'rho_fluct':('k', 'k')}\n",
-    "    cbars = True if dump == 88 else False\n",
-    "    plot_panels(moms, dump, slice_width, vars, vlims, cmaps, axis=axis, ifig=ifig, cbars=cbars, \\\n",
-    "                cbar_labels=cbar_labels, labels=labels, label_coords=label_coords, \\\n",
-    "                label_colors=label_colors)\n",
-    "    plt.savefig('Mar_Mat_rho_fluct_{:s}_{:04d}.pdf'.format(run_id, dump), dpi=200)\n",
+    "    t = yp[rid].get('t', fname=dump)[-1]\n",
+    "    labels = {'Mar':(rid, '{:.1f} min'.format(t/60.)), \\\n",
+    "              'Mat':(rid, '{:.1f} min'.format(t/60.)), \\\n",
+    "              'rho_fluct':(rid, '{:.1f} min'.format(t/60.))}\n",
+    "    cbars = True #if dump == 81 else False\n",
+    "    plot_panels(moms[rid], dump, slice_width, vars, vlims, cmaps, axis=axis, ifig=ifig, \\\n",
+    "                cbars=cbars, cbar_labels=cbar_labels, labels=labels, \\\n",
+    "                label_coords=label_coords, label_colors=label_colors)\n",
+    "    plt.savefig('Mar_Mat_rho_fluct_{:s}_{:04d}.pdf'.format(rid, dump), dpi=200)\n",
+    "    ifig += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6579d4840e2a40c190bac827b85dd5f7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FigureCanvasNbAgg()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "max(abs(Mar)): 4.45e-02\n",
+      "max(abs(Mat)): 5.39e-02\n",
+      "max(abs(rho_fluct)): 4.04e-02\n"
+     ]
+    }
+   ],
+   "source": [
+    "rid = 'I5'\n",
+    "vlims = {'Mar':(0., 0.04), \\\n",
+    "         'Mat':(0., 0.04), \\\n",
+    "         'rho_fluct':(-0.001, 0.001)}\n",
+    "axis = 0\n",
+    "\n",
+    "ifig = 10\n",
+    "#for dump in (130, 260):\n",
+    "for dump in (260, ):\n",
+    "    t = yp[rid].get('t', fname=dump)[-1]\n",
+    "    labels = {'Mar':(rid, '{:.1f} min'.format(t/60.)), \\\n",
+    "              'Mat':(rid, '{:.1f} min'.format(t/60.)), \\\n",
+    "              'rho_fluct':(rid, '{:.1f} min'.format(t/60.))}\n",
+    "    cbars = True #if dump == 260 else False\n",
+    "    plot_panels(moms[rid], dump, slice_width, vars, vlims, cmaps, axis=axis, ifig=ifig, \\\n",
+    "                cbars=cbars, cbar_labels=cbar_labels, labels=labels, \\\n",
+    "                label_coords=label_coords, label_colors=label_colors)\n",
+    "    plt.savefig('Mar_Mat_rho_fluct_{:s}_{:04d}.pdf'.format(rid, dump), dpi=150)\n",
     "    ifig += 1"
    ]
   },
